--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>My Graphics Portfolio</title>
+  <style>
+    body { font-family: sans-serif; text-align: center; padding: 50px; }
+    a.button {
+      display: inline-block;
+      padding: 15px 25px;
+      margin: 20px;
+      background: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 18px;
+    }
+    a.button:hover { background: #0056b3; }
+  </style>
 </head>
-<body style="font-family: sans-serif; text-align: center; padding: 50px;">
+<body>
   <h1>My Graphics Portfolio</h1>
-  <p>Scroll or zoom to view my work below:</p>
-  <iframe src="portfolio.pdf" width="80%" height="800px" style="border:1px solid #ccc;"></iframe>
+  <p>Click below to view my portfolio:</p>
+  <a class="button" href="portfolio.pdf" target="_blank">Open Portfolio PDF</a>
 </body>
 </html>
