--- a/index.html
+++ b/index.html
@@ -4,23 +4,38 @@
   <meta charset="UTF-8">
   <title>My Graphics Portfolio</title>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 50px; }
-    a.button {
-      display: inline-block;
-      padding: 15px 25px;
+    body {
+      font-family: sans-serif;
+      text-align: center;
       margin: 20px;
-      background: #007bff;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 18px;
     }
-    a.button:hover { background: #0056b3; }
+
+    h1 {
+      margin-bottom: 20px;
+    }
+
+    /* Responsive iframe container */
+    .pdf-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 141%; /* Aspect ratio for A4 PDF (height/width) */
+      height: 0;
+    }
+
+    .pdf-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 1px solid #ccc;
+    }
   </style>
 </head>
 <body>
   <h1>My Graphics Portfolio</h1>
-  <p>Click below to view my portfolio:</p>
-  <a class="button" href="portfolio.pdf" target="_blank">Open Portfolio PDF</a>
+  <div class="pdf-container">
+    <iframe src="portfolio.pdf"></iframe>
+  </div>
 </body>
 </html>
