--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <body>
   <h1>My Graphics Portfolio</h1>
   <div class="pdf-container">
-    <iframe src="portfolio.pdf"></iframe>
+    <embed src="portfolio.pdf" style="position:absolute; left: 0; top: 0;" width="100%" height="100%" type="application/pdf">
+
   </div>
 </body>
 </html>
